welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
    if (die1==6){die1=1} else {die1= die1 + 1}
                     ^withoutDoubles:3: error: reassignment to val
    if (die1==6){die1=1} else {die1= die1 + 1}
                                   ^